[package]
name = "sitemap"
version = "0.1.0"
authors = ["Hari Amoor <amoor.hari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.51"
log = "0.4.8"
async-std = "1.5.0"
select = "0.4.3"
futures = "0.3.4"
reqwest = { version = "0.10.4", features = ["blocking"] }
